working on getting the html page to show up

--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -6,7 +6,7 @@
     "packageName": "com.microsoft.teams.extension",
     "developer": {
         "name": "Teams App, Inc.",
-        "websiteUrl": "https://gentle-grass-0cccc911e.3.azurestaticapps.net",
+        "websiteUrl": "https://purple-sea-07c1a931e.3.azurestaticapps.net",
         "privacyUrl": "https://www.example.com/privacy",
         "termsOfUseUrl": "https://www.example.com/termsofuse"
     },
