--- a/teamsapp.local.yml
+++ b/teamsapp.local.yml
@@ -18,8 +18,8 @@ provision:
   - uses: script 
     with:
       run:
-        echo "::set-teamsfx-env TAB_DOMAIN=green-mushroom-0721fca1e.3.azurestaticapps.net";
-        echo "::set-teamsfx-env TAB_ENDPOINT=https://green-mushroom-0721fca1e.3.azurestaticapps.net";
+        echo "::set-teamsfx-env TAB_DOMAIN=blue-smoke-07b245b1e.3.azurestaticapps.net";
+        echo "::set-teamsfx-env TAB_ENDPOINT=https://blue-smoke-07b245b1e.3.azurestaticapps.net";
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
     with:
