Trying different configuration

--- a/env/.env.dev
+++ b/env/.env.dev
@@ -12,6 +12,6 @@ RESOURCE_SUFFIX=cbc376
 TEAMS_APP_ID=63bb1d96-6d64-412f-9cd1-8de1ca5508b1
 TAB_AZURE_STORAGE_RESOURCE_ID=
 TEAMS_APP_TENANT_ID=b686de2a-ad4d-4bca-9bb9-9a56883ae69c
-TAB_DOMAIN=blue-smoke-07b245b1e.3.azurestaticapps.net
-TAB_ENDPOINT=https://blue-smoke-07b245b1e.3.azurestaticapps.net
+TAB_DOMAIN=metaosapp.azurewebsites.net/
+TAB_ENDPOINT=https://metaosapp.azurewebsites.net/
 TEAMS_APP_PUBLISHED_APP_ID=a44c6021-ac96-4d73-91fa-074e9503cb8f
